@@ -122,6 +122,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-19 sam. 03:54]--[2016-11-19 sam. 04:04] =>  0:10
+     CLOCK: [2016-11-19 sam. 02:20]--[2016-11-19 sam. 03:35] =>  1:15
      CLOCK: [2016-11-19 sam. 01:50]--[2016-11-19 sam. 02:18] =>  0:28
      CLOCK: [2016-11-19 sam. 00:07]--[2016-11-19 sam. 01:05] =>  0:58
      CLOCK: [2016-11-18 ven. 23:20]--[2016-11-18 ven. 23:46] =>  0:26
@@ -166,6 +168,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Handle Alt+Enter in GameEngine
       - [-] Next thing is to handle GameEngine::reconfigure()
         - [X] Must get the acual fullscreen value from Ogre config
+	- [X] Save current gamestate and serialize it
         - [-] Handle the Ogre restart as for shutdown. A boolean flag
 	  member that shutdown and restart Ogre
 	  But that's the function that can handle restart after
@@ -174,13 +177,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
 	  - [X] The CEGUI log tells we don't have correctly shutdown   
 	    CEGUI::System object is already initialized
           - [ ] Must implement GameEngine::reconfigure()
-	- [ ] Save current gamestate and serialize it
+	    - [ ] We have many things to initialise without config dialog
         - [ ] Ogre startup process must stay in little members function
 	  so we exactly know the order of initialization
         - [ ] Shutdown Ogre
         - [ ] Change its fullscreen configuration (maybe save it to file)
         - [ ] Restart Ogre an subsystem (OIS, CEGUI etc...)
-      - [ ] Then implement them in MainMenu
+      - [ ] Then implement save/restore in MainMenu
 	save the visible state of NyiDialogs, positions of windows etc...
 - [ ] It could be fine if this changes could be serialized in the same
   way Ogre does it. This way, at next startup, the Ogre config dialog
